--- a/trunk/euro2012/css/style.css
+++ b/trunk/euro2012/css/style.css
@@ -23,7 +23,7 @@ body {
     clear:both;
     }   
     
-#content p {
+p {
     line-height:1.4em;
     }
 a {
@@ -77,7 +77,7 @@ ul li{line-height:1.5em;}
 #content h2 {
     font-size: 24px;
     font-weight: bold;
-    margin: 5px auto;
+    margin: 5px auto 16px;
     }
 
 #prediction_form {float:left;}
@@ -200,7 +200,7 @@ form input, form select {
     }
 form p label {
     float: left;
-    min-width: 100px;
+    min-width: 120px;
     text-align: right;
     padding: 3px 5px 0px;
     }
@@ -280,3 +280,4 @@ div.textview {
     border: 1px solid #ccc;
     background-color: #eee;
 }
+div.floatleft{float:left;}
