--- a/trunk/euro2012/css/style.css
+++ b/trunk/euro2012/css/style.css
@@ -43,17 +43,19 @@ ul li{line-height:1.5em;}
     padding-bottom: 3px;
     margin-bottom: 3px;
     }
-.user {overflow:hidden;}    
+div.user {overflow:hidden;border:1px solid #ccc;margin-bottom:10px;background-color:#eee;padding:10px;}    
 .user ul {
     float: left;
-    width: 240px;
-    padding-left: 10px;
+    width: 290px;
+    padding: 0px 10px;
     overflow:hidden;
     }
 .user ul li{
     margin-bottom:4px;
     }   
-
+.user ul li label{
+    width:100px;float:left;
+    }
 /* navigation */
 #navigation {
 	background:#BDD2FF;
