--- a/trunk/euro2012/css/style.css
+++ b/trunk/euro2012/css/style.css
@@ -5,304 +5,319 @@
 /* reset stuff */
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 /* end of reset stuff */
-html, body {height:100%;}
+html, body {
+    height:             100%;
+    }
 
 body {
-	font-family: 'Droid Sans', Arial, sans;
-	background-color: #fafafa;
-    font-size: 14px;
-    margin:0;
+	background:         #fafafa;
+    font-family:        'Droid Sans', Arial, sans;
+    font-size:          14px;
+    margin:             0;
 	}
 /*Opera Fix*/
 body:before {
-	content:"";
-	height:100%;
-	float:left;
-	width:0;
-	margin-top:-32767px;/
+	content:            "";
+	height:             100%;
+	float:              left;
+	width:              0;
+	margin-top:         -32767px;/
 }
-	
-#container{	
-	width: 1000px;
-	margin: 0 auto;
-	min-height: 100%
-	}
-#content {
-
-    overflow: auto;
-    clear:both;
-    padding-bottom:96px;
-    }   
-    
+/*standard elements*/
 p {
-    line-height:1.4em;
+    line-height:        1.4em;
     }
 a {
-    color: #5757B9;
-    font-weight:bold;
+    color:              #5757B9;
+    font-weight:        bold;
     }
-    
 a.adminlink, .adminlink a {
-    color: #F75F07;
+    color:              #F75F07;
     }
-a img {outline:none;
-border-style:none;}
-div.adminlink {float:right;}
-ul li{line-height:1.5em;}
-/* user controls */
-
-#user-controls {
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 3px;
-    margin-bottom: 3px;
+a img {
+    outline:            none;
+    border-style:       none;
     }
-div.user {overflow:hidden;border:1px solid #ccc;margin-bottom:10px;background-color:#eee;padding:10px;}    
-.user ul {
-    float: left;
-    width: 290px;
-    padding: 0px 10px;
-    overflow:hidden;
+div.adminlink {
+    float:              right;
     }
-.user ul li{
-    margin-bottom:4px;
-    }   
-.user ul li label{
-    width:100px;float:left;
+ul li {
+    line-height:        1.5em;
     }
-/* navigation */
+form p {
+    margin:             3px 0px;
+    } 
+form input, form select {
+    margin-bottom:      6px 0px;
+    }
+form p label {
+    float:              left;
+    min-width:          120px;
+    padding:            3px 5px 0px;
+    text-align:         right;
+    }
+p.wide label {
+    min-width:          160px;
+    }
+/*ids*/
+#container {	
+	margin:             0 auto;
+	min-height:         100%;
+	width:              1000px;
+	}
+#content {
+    clear:              both;
+    overflow:           hidden;
+    padding-bottom:     96px;
+    }
 #navigation {
-	background:#BDD2FF;
-	width:100%;
-	float:left;
-	margin-bottom:8px;
+	background:         #BDD2FF;
+	float:              left;
+	margin-bottom:      8px;
+	width:              100%;
     }
 #footer {
-    border-top: 1px solid #ddd;
-    padding-top: 5px;
-    margin: -96px auto 0px;
-    height:90px;
-    width: 1000px;
-    clear:both;
-    overflow:hidden;
+    border-top:         1px solid #ddd;
+    height:             90px;
+    margin:             -96px auto 0px;
+    overflow:           hidden;
+    padding-top:        5px;
+    width:              1000px;
     }    
-
-
-#content h3 {
-    font-size: 18px;
-    font-weight: bold;
-    margin: 5px auto;
-    }
-    
 #content h2 {
-    font-size: 24px;
-    font-weight: bold;
-    margin: 5px auto 16px;
+    font-size:          24px;
+    font-weight:        bold;
+    margin:             5px auto 16px;
+    }
+#content h3 {
+    font-size:          18px;
+    font-weight:        bold;
+    margin:             5px auto;
+    }    
+#content h3.topline {
+    border-top:         1px solid #ccc;
+    margin-top:         12px;
+    padding-top:        4px;
+    }
+/* user controls */
+div.user {
+    background:         #eee;
+    border:             1px solid #ccc;
+    margin-bottom:      10px;
+    overflow:           hidden;
+    padding:            10px;
+    }    
+.user ul {
+    float:              left;
+    overflow:           hidden;
+    padding:            0px 10px;
+    width:              290px;
+    }
+.user ul li {
+    margin-bottom:      4px;
+    }   
+.user ul li label {
+    float:              left;
+    width:              100px;
     }
 
-#prediction_form {float:left;}
+
+#prediction_form {
+    float:              left;
+    }
 #prediction_info {
-    float:left;
-    margin-left:40px;
-    border: 1px solid #ccc;
-    padding:20px;
+    border:             1px solid #ccc;
+    float:              left;
+    margin-left:        40px;
+    padding:            20px;
     }
-#prediction_info ul{
-    margin:10px;
-    padding:0;
+#prediction_info ul {
+    margin:             10px;
+    padding:            0;
     }
-#prediction_info ul li{
-    margin-bottom:4px;
+#prediction_info ul li {
+    margin-bottom:      4px;
     }
         
 /* BUTTONS */
 p.buttons {
-    overflow:hidden;
-    margin: 5px 0;
-    clear:both;
+    overflow:           hidden;
+    margin:             5px 0;
+    clear:              both;
     }
 .buttons a, .buttons button, .buttons input[type="submit"], .buttons_small a {
-    display:block;
-    float:left;
-    margin:0 7px 0 0;
-    background-color:#ddd;/*#f5f5f5;*/
-    border:1px solid #bbb;
-    border-top:1px solid #eee;
-    border-left:1px solid #eee;
-
-    font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
-    font-size:100%;
-    line-height:130%;
-    text-decoration:none;
-    font-weight:bold;
-    color:#565656;
-    cursor:pointer;
-    padding:5px 10px 5px 7px; /* Links */
-}
+    background-color:   #ddd;
+    border:             1px solid #bbb;
+    border-top:         1px solid #eee;
+    border-left:        1px solid #eee;
+    color:              #565656;
+    cursor:             pointer;
+    display:            block;
+    float:              left;
+    font-family:        "Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
+    font-size:          100%;
+    font-weight:        bold;
+    line-height:        130%;
+    margin:             0 7px 0 0;
+    text-decoration:    none;
+    padding:            5px 10px 5px 7px;
+    }
 .buttons_small a {
-    margin: 4px 2px 3px 0;
-    font-size:11px;
-    line-height:16px;
-    font-weight: normal !important;
-    padding:2px 7px 3px 4px; /* Links */
-}
+    font-size:          11px;
+    font-weight:        normal !important;
+    line-height:        16px;
+    margin:             4px 2px 3px 0;
+    padding:            2px 7px 3px 4px;
+    }
 
 .buttons button{
-    width:auto;
-    overflow:visible;
-    padding:4px 10px 3px 7px; /* IE6 */
-}
+    overflow:           visible;
+    padding:            4px 10px 3px 7px; /* IE6 */
+    width:              auto;
+    }
 .buttons button[type], .buttons input[type="submit"] {
-    padding:5px 10px 5px 7px; /* Firefox */
-    line-height:17px; /* Safari */
-}
+    padding:            5px 10px 5px 7px; /* Firefox */
+    line-height:        17px; /* Safari */
+    }
 *:first-child+html button[type]{
-    padding:4px 10px 3px 7px; /* IE7 */
-}
+    padding:            4px 10px 3px 7px; /* IE7 */
+    }
 .buttons button img, .buttons a img,.buttons_small a img {
-    margin:0 3px -3px 0 !important;
-    padding:0;
-    border:none;
-    width:16px;
-    height:16px;
-}
+    border:             none;
+    height:             16px;
+    margin:             0 3px -3px 0 !important;
+    padding:            0;
+    width:              16px;
+    }
 
 /* STANDARD */
 
 button:hover, .buttons a:hover, .buttons_small a:hover{
-    background-color:#dff4ff;
-    border:1px solid #c2e1ef;
-    color:#336699;
-}
+    background-color:   #dff4ff;
+    border:             1px solid #c2e1ef;
+    color:              #336699;
+    }
 .buttons a:active, .buttons_small a:active{
-    background-color:#6299c5;
-    border:1px solid #6299c5;
-    color:#fff;
-}
+    background-color:   #6299c5;
+    border:             1px solid #6299c5;
+    color:              #fff;
+    }
 
 /* POSITIVE */
 
 button.positive, .buttons a.positive, .buttons input[type="submit"], .buttons_small a.positive{
-    color:#529214;
-}
+    color:              #529214;
+    }
 .buttons a.positive:hover, button.positive:hover, .buttons input[type="submit"]:hover, .buttons_small a.positive:hover{
-    background-color:#E6EFC2;
-    border:1px solid #C6D880;
-    color:#529214;
-}
+    background-color:   #E6EFC2;
+    border:             1px solid #C6D880;
+    color:              #529214;
+    }
 .buttons a.positive:active, .buttons input[type="submit"]:active, .buttons_small a.positive:active{
-    background-color:#529214;
-    border:1px solid #529214;
-    color:#fff;
-}
+    background-color:   #529214;
+    border:             1px solid #529214;
+    color:              #fff;
+    }
 
 /* NEGATIVE */
 
 .buttons a.negative, button.negative, .buttons_small a.negative{
-    color:#d12f19;
-}
+    color:              #d12f19;
+    }
 .buttons a.negative:hover, button.negative:hover, .buttons_small a.negative:hover {
-    background:#fbe3e4;
-    border:1px solid #fbc2c4;
-    color:#d12f19;
-}
+    background:         #fbe3e4;
+    border:             1px solid #fbc2c4;
+    color:              #d12f19;
+    }
 .buttons a.negative:active, .buttons_small a.negative:active{
-    background-color:#d12f19;
-    border:1px solid #d12f19;
-    color:#fff;
-}
-/*forms*/
-form p {
-    margin: 3px 0px;
-    } 
-form input, form select {
-    margin-bottom:6px 0px;
+    background-color:   #d12f19;
+    border:             1px solid #d12f19;
+    color:              #fff;
     }
-form p label {
-    float: left;
-    min-width: 120px;
-    text-align: right;
-    padding: 3px 5px 0px;
-    }
-    
-p.wide label {min-width:160px;}
 
-#content h3.topline {margin-top:12px;padding-top:4px; border-top:1px solid #ccc;}
 /*Message Boxes*/
 .info {
-    color: #00529B;
-    min-height: 30px;
-    margin: 10px 0;
-    border: 1px solid #00529B;
-    padding: 10px 10px 10px 50px;
-    background: #BDE5F8 url('../images/info.png') 5px 5px no-repeat;}
-.success {
-    color: #4F8A10;
-    min-height: 30px;
-    margin: 10px 0;
-    border: 1px solid #4F8A10;
-    padding: 10px 10px 10px 50px;
-    background: #DFF2BF url('../images/success.png') 5px 5px no-repeat;}
-.warning {
-    color: #9F6000;
-    min-height: 30px;
-    margin: 10px 0;
-    border: 1px solid #9F6000;
-    padding: 10px 10px 10px 50px;
-    background: #FEEFB3 url('../images/warning.png') 5px 5px no-repeat;}
-.error {
-    color: #D8000C;
-    min-height: 30px;
-    margin: 10px 0;
-    border: 1px solid #D8000C;
-    padding: 10px 10px 10px 50px;
-    background: #FFBABA url('../images/error.png') 5px 5px no-repeat;
+    background:         #BDE5F8 url('../images/info.png') 5px 5px no-repeat;
+    border:             1px solid #00529B;
+    color:              #00529B;
+    margin:             10px 0;
+    min-height:         30px;
+    padding:            10px 10px 10px 50px;
     }
-.error p, .success p {margin-top:0px;}
+.success {
+    background:         #DFF2BF url('../images/success.png') 5px 5px no-repeat;
+    border:             1px solid #4F8A10;
+    color:              #4F8A10;
+    margin:             10px 0;
+    min-height:         30px;
+    padding:            10px 10px 10px 50px;
+    }
+.warning {
+    background:         #FEEFB3 url('../images/warning.png') 5px 5px no-repeat;
+    border:             1px solid #9F6000;
+    color:              #9F6000;
+    margin:             10px 0;
+    min-height:         30px;
+    padding:            10px 10px 10px 50px;
+    }
+.error {
+    background:         #FFBABA url('../images/error.png') 5px 5px no-repeat;
+    border:             1px solid #D8000C;
+    color:              #D8000C;
+    margin:             10px 0;
+    min-height:         30px;
+    padding:            10px 10px 10px 50px;
+    }
+.error p, .success p {
+    margin-top:         0px;
+    }
 /*specials*/
 .red, .red a {
-    color:red;
+    color:              red;
     }
 .green {
-    color:green;
+    color:              green;
     }
 .bold {
-    font-weight:bold;
+    font-weight:        bold;
     }
 .center{
-    margin: 0 auto;
-    overflow: hidden;
-    text-align: center;
+    margin:             0 auto;
+    overflow:           hidden;
+    text-align:         center;
     }
 .strikethrough{
-    text-decoration: line-through;
+    text-decoration:    line-through;
     }
     
 #match-stats {
-    margin: 0 auto;
-    width:400px;
-    overflow: hidden;
+    margin:             0 auto;
+    width:              400px;
+    overflow:           hidden;
     }
 .stats-name, .stats-score {
-    width: 200px;
-    float:left;
-    font-size: 20px;
-    text-align: center;
+    float:              left;
+    font-size:          20px;
+    text-align:         center;
+    width:              200px;
     }
 .stats-score {
-    font-size: 40px;
-    font-weight: bold;
+    font-size:          40px;
+    font-weight:        bold;
     }
 .stats-name img {
-    margin: 0 auto;
+    margin:             0 auto;
     }
     
 div.textview {
-    margin: 10px 30px;
-    padding: 12px;
-    border: 1px solid #ccc;
-    background-color: #eee;
+    border:             1px solid #ccc;
+    background-color:   #eee;
+    margin:             10px 30px;
+    padding:            12px;
 }
-div.floatleft{float:left;}
+div.floatleft{
+    float:              left;
+    }
 
 /*homepage styles*/
 div.home_row {
@@ -310,9 +325,6 @@ div.home_row {
     border-bottom:  1px solid #ccc;
     margin:         0px 0px 10px 0px;
     padding-bottom: 5px;
-    }
-div.home_row p{
-    /*text-align:     justify;*/
     }
 div.home_row ul{
     padding-left:   0px;
@@ -325,5 +337,15 @@ div.column_1{
 div.column_2{
     float:          left;
     width:          490px;
+    padding:        0px 5px;
+    }
+div.column_3{
+    float:          left;
+    width:          740px;
+    padding:        0px 5px;
+    }
+div.column_4{
+    float:          left;
+    width:          990px;
     padding:        0px 5px;
     }
