--- a/trunk/euro2012/css/superfish.css
+++ b/trunk/euro2012/css/superfish.css
@@ -12,6 +12,7 @@
 	position:		absolute;
 	top:			-999em;
 	width:			10em; /* left offset of submenus need to match (see below) */
+    margin-top:     5px;
 }
 .sf-menu ul li {
 	width:			100%;
