--- a/trunk/euro2012/css/style.css
+++ b/trunk/euro2012/css/style.css
@@ -117,6 +117,12 @@ h3.top-ten {
     padding:            15px 0 0 55px;
     vertical-align:     middle;
     }
+h3.final-results {
+    background:         url('../images/money.png') no-repeat 0px -10px;
+    height:             33px;
+    padding:            15px 0 0 55px;
+    vertical-align:     middle;
+    }
 h3.news {
     background:         url('../images/newspaper.png') no-repeat;
     height:             33px;
