--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -164,14 +164,17 @@ a.adminlink {
     margin:0;
 }
 #footer {
+font-size:.8em;
  margin-top: 20px;
- background: #333;
- color: #fff;
+ background: #ccc;
+ border-top:1px solid #333;
+ color: #333;
+ text-shadow: 0px 1px 1px #fff;
  padding: 5px;
  }
  
 #footer a {
- color: #fff;
+ color: #333;
 }
  
 #footer p {
