--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -905,3 +905,14 @@ font-style: italic;
     width:100%;
     }
 
+input#shout {
+	width:100%;
+	margin-bottom: 5px;
+}
+
+#shoutlist {
+	overflow: auto;
+	}
+#shoutlist img {
+	margin: 0 5px 5px 0;
+}
