--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -61,7 +61,11 @@ p {
     text-align: justify;
 }
 
-ul { line-height: 1.2em; }
+ul {
+    line-height: 1.2em;
+    margin-bottom: 0.5em;
+
+    }
 
 #home ul {
     font-size:1em;
@@ -77,7 +81,10 @@ list-style-type: disc;
     margin-bottom: 1.5em;
     list-style-type: disc;
 }
-
+ul.hasbullets {
+    margin-left: 18px;
+}
+   
 .hasbullets li {
     list-style-type: disc;
 }
@@ -358,53 +365,6 @@ label {
 .match_nav {
         margin-top:8px;
         }
-        
-#userchecks {
-    /*font-size: .8em;*/
-    }
-#userchecks h4.top {
-    border-top:1px solid #ccc;
-}
-
-#userchecks h4 {
-    font-size:1.2em;
-    font-weight: bold;
-    /*padding-bottom: 3px;
-    border-bottom: 1px solid #666;*/
-    margin-top: 8px 0;
-    /*background: #666;
-    color: #fff;*/
-    text-align:center;
-    padding:3px;
-    }
-#userchecks p{
-    margin-bottom:3px;
-    }
-#userchecks .buttons {
-padding-bottom: 8px
-}
-
-#userchecks h2 {
-    font-size:1.2em;
-    font-weight: bold;
-    margin: 0;
-    }
-
-#userchecks .to_do {
-    color: #f33;
-    margin-top: 10px;
-    border-top: 1px solid #ccc;
-}
-
-h4.to_do a{
-    color: #f33;
-    }
-
-.borderseparation {
-    border-bottom:1px solid #ccc;
-    padding-bottom: 8px;
-    margin-bottom:10px;
-    }
 
 #main img {
     margin-bottom: 10px;
@@ -609,7 +569,8 @@ a.button, input.button, button.button {
 a.button:hover, input.button:hover, button.button:hover {
     color: #333;
     border-color: #999;
-    -moz-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.2) -webkit-box-shadow:0 2px 5px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow:0 2px 5px rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
 }
 a.button:active, input.button:active, button.button:active {
@@ -704,8 +665,33 @@ a.arrow_right, input.arrow_right, button.arrow_right {
 a.user_comment, input.user_comment, button.user_comment {
     background: url(icons/user_comment.png) 7px 7px no-repeat #f3f3f3;
     padding-left: 30px;
-    }    
-a.add {
+    }
+a.user_delete, input.user_delete, button.user_delete {
+    background: url(icons/user_delete.png) 7px 7px no-repeat #f3f3f3;
+    padding-left: 30px;
+    }     
+a.user, input.user, button.user {
+    background: url(icons/user.png) 7px 7px no-repeat #f3f3f3;
+    padding-left: 30px;
+    }
+a.vcard, input.vcard, button.vcard {
+    background: url(icons/vcard.png) 7px 7px no-repeat #f3f3f3;
+    padding-left: 30px;
+    }
+a.lock_edit, input.lock_edit, button.lock_edit {
+    background: url(icons/lock_edit.png) 7px 7px no-repeat #f3f3f3;
+    padding-left: 30px;
+    }
+a.link, input.link, button.link {
+    background: url(icons/link.png) 7px 7px no-repeat #f3f3f3;
+    padding-left: 30px;
+    }
+a.picture_delete, input.picture_delete, button.picture_delete {
+    background: url(icons/picture_delete.png) 7px 7px no-repeat #f3f3f3;
+    padding-left: 30px;
+    }
+    
+    a.add {
     background: url(sprite.png)  10px -27px no-repeat #f3f3f3;
     padding-left: 30px;
 }
@@ -894,7 +880,7 @@ padding: 10px;
 margin-bottom:10px;
 }
 .code {
-    font-family: 'Courier New','monospace';
+    font-family: 'Courier New', monospace;
     }
 em {
 font-style: italic;
@@ -916,3 +902,7 @@ input#shout {
 #shoutlist img {
 	margin: 0 5px 5px 0;
 }
+
+#recaptcha_widget_div {
+    margin: 5px 0 10px;
+    }
